--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <!-- Thank you state start -->
     <div class="thank-you-section hidden">
-      <img id="thank-you-img" src="/res/illustration-thank-you.svg" alt="thank you"/>
+      <img id="thank-you-img" src="./res/illustration-thank-you.svg" alt="thank you"/>
       <div class="chosen-rating-container">
         You selected <span id="chosen-rating">3</span> out of 5
       </div>
